ACME-FITNESS/kubernetes-manifests/FRONTEND/frontend.yaml
apiVersion: apps/v1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: acmefit
    service: frontend
spec:
  selector:
    matchLabels:
      app: acmefit
      service: frontend
  strategy:
    type: Recreate
  replicas: 3
  template:
    metadata:
      labels:
        app: acmefit
        service: frontend
    spec:
      containers:
      - image: gcr.io/vmwarecloudadvocacy/acmeshop-front-end:latest
        name: frontend
        ports:
        - containerPort: 3000
          name: frontend
