ACME-FITNESS/kubernetes-manifests/FRONTEND/frontend-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: acmefit
    service: frontend
spec:
  ports:
    - name: http-frontend
      protocol: TCP
      port: 80
      targetPort: 3000
#      nodePort: 30430
  selector:
    app: acmefit
    service: frontend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acme-ingress
  labels:
    app: gslb
spec:
  tls:
  - hosts:
    - acme.global.tanzuhispano.lab
    secretName: acme-secret
  rules:
  - host: acme.global.tanzuhispano.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
